# env_setup

./: .gitmodules  README.md  bootstrap.py  gsettings.sh  local.yml  todo.md
files/: .gitconfig  .tmux.conf.local  bashrc  dconf_settings.txt  godsmith_header.txt  py_startup.py  wsl_common_commands.txt  zshrc
files/alacritty/: alacritty.yml
files/coc/: package.json  suggest.txt
files/coc/extensions/: db.json  package.json
files/coc/extenstions/: package.json
files/fail2ban/: jail.local
files/kitty/: kitty.conf
files/nvim/: coc-settings.json  init.vim
files/ssh/: secure_ssh.conf  sshd_config
files/zshrc/: zshrc
scripts/: bootstrap.py  dnf_conf.sh
tui/: pyproject.toml
