[tool.poetry]
name = "tui"
version = "0.1.0"
description = "OS configuration tui"
authors = ["godsmith <jgodfrey-smith@pm.me>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = {git = "https://github.com/Textualize/textual.git", rev = "css"}
pydantic = "^1.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.971"
black = "^22.8.0"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
